@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class ProductController {
+ResponseEntity<Product> getProduct
}

class Product {
-name
-productId
-Sku
-description
+getName()
+getProductId()
+getSku()
+getDescription()
}



class ProductService {
    + findAll()
}

interface ProductRepository <<interface>> {
List<ProductAllView>findAllProducts()
}

interface ProductServiceImpl <<interface>> {
    +List<ProductAllView> findAll()

}


ProductService "1" -down-> "1" ProductServiceImpl:  uses


ProductController ..> ProductService
ProductServiceImpl ..> ProductRepository
ProductService ..> Product



@enduml
